--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -12,6 +12,6 @@
     background-repeat: no-repeat;
     width: 100vh;
     min-height: 100vh;
-    background-size: cover;
-    background-position: center;
+    background-size: cover !important;
+    background-position: center !important;
 }
