--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,18 +1,18 @@
-.caixa{
-    background-color: plum;
+.caixa {
+    background-color: #3F51B5;
 }
 
-.titulo{
+.titulo {
     color: white !important;
     font-weight: bold !important;
 }
 
-.butao{
+.botao {
     border-color: white !important;
-    background-color: plum;
+    background-color: #3F51B5;
     color: white !important;
 }
 
-.postagens{
+.postagens {
     background-color: white;
 }
