--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -1,17 +1,16 @@
-.text-decorator-none{
-    text-decoration: none;
-}
-
-.textos2{
+.textos1 {
     font-weight: bold !important;
-    color: black;
 }
 
-.imagem{
+.imagem {
     background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
     background-repeat: no-repeat;
     width: 100vh;
     min-height: 100vh;
-    background-size: cover !important;
-    background-position: center !important;
+    background-size: cover;
+    background-position: center;
+}
+
+.text-decorator-none {
+    text-decoration: none;
 }
