--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,18 +1,18 @@
 .caixa {
-    background-color: #3F51B5;
+    background-color: #1b4332;
 }
 
 .titulo {
-    color: white !important;
+    color: #DDE7C7 !important;
     font-weight: bold !important;
 }
 
 .botao {
-    border-color: white !important;
-    background-color: #3F51B5;
-    color: white !important;
+    border-color: #DDE7C7 !important;
+    background-color: hwb(155 8% 61%) !important;
+    color: #DDE7C7 !important;
 }
 
 .postagens {
-    background-color: white;
+    background-color: #DDE7C7;
 }
